--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
   background-repeat: no-repeat;
   background-position: bottom center;
   border: solid lightblue;
-  width: 75vw;
-  height: 60vh;
+  width: 75dvw;
+  height: 60dvh;
   margin-top: 2em;
   margin-left: 20em;
   display: flex;
